[gd_scene load_steps=11 format=3 uid="uid://ba738qi6kprqt"]

[ext_resource type="Script" path="res://objetos/enemigos/basico/enemy_basic.gd" id="1_hw2ha"]
[ext_resource type="Script" path="res://clases/hurtbox.gd" id="2_u7p3j"]
[ext_resource type="Texture2D" uid="uid://ceqeq3gex7d0t" path="res://sprites/enemigos/Nairan - Bomber - Base.png" id="2_yqh38"]
[ext_resource type="AudioStream" uid="uid://be33myiabs1u4" path="res://sonidos/Da√±o a enemigo.mp3" id="4_btm7y"]
[ext_resource type="AudioStream" uid="uid://c3n4anctthlp2" path="res://sonidos/Muerte enemigo.mp3" id="5_4oeri"]
[ext_resource type="Script" path="res://componentes/npc_movement_component.gd" id="6_dvekq"]
[ext_resource type="Script" path="res://componentes/health_component.gd" id="7_gehmw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kt7i0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m881r"]
size = Vector2(40, 20)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ucst7"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_btm7y")

[node name="EnemyBasic" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_hw2ha")

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource("CanvasItemMaterial_kt7i0")
rotation = -1.57079
scale = Vector2(0.5, 0.5)
color = Color(1, 1, 1, 0)
offset = Vector2(24, -40)
polygon = PackedVector2Array(-64, 64, -64, 56, -72, 56, -72, 40, -48, 40, -48, 32, -56, 32, -56, 40, -72, 40, -72, 24, -64, 24, -64, 16, -48, 16, -48, 8, 0, 8, 0, 16, 16, 16, 16, 24, 24, 24, 24, 40, 8, 40, 8, 32, 0, 32, 0, 40, 24, 40, 24, 56, 16, 56, 16, 64, 0, 64, 0, 56, -8, 56, -16, 64, -32, 64, -40, 56, -48, 56, -48, 64)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D"]
position = Vector2(1.90735e-06, 1.90735e-06)
rotation = 3.14159
scale = Vector2(3.62953, 3.62953)
texture = ExtResource("2_yqh38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
rotation = -1.57079
shape = SubResource("RectangleShape2D_m881r")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("owner_node")]
collision_layer = 8
collision_mask = 4
script = ExtResource("2_u7p3j")
owner_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-2, 0)
rotation = -1.57079
shape = SubResource("RectangleShape2D_m881r")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ucst7")
volume_db = -10.0

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_4oeri")
volume_db = -8.0

[node name="NPCMovementComponent" type="Node" parent="." node_paths=PackedStringArray("npc_node")]
script = ExtResource("6_dvekq")
npc_node = NodePath("..")
speed = 5000.0

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("the_node")]
script = ExtResource("7_gehmw")
the_node = NodePath("..")

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="damaged" from="HurtBox" to="HealthComponent" method="_on_hurt_box_damaged"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
